[gd_scene load_steps=40 format=2]

[ext_resource path="res://scenes/Mainscene/PathFollow.gd" type="Script" id=1]
[ext_resource path="res://Door.new/Door-new.glb" type="PackedScene" id=2]
[ext_resource path="res://Components/Grass textrue.jpeg" type="Texture" id=3]
[ext_resource path="res://scenes/transitionobjects/transitionobject/Transition_Object.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/Office/mainscenes/office-3.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/atrium/Newatrium.glb" type="PackedScene" id=7]
[ext_resource path="res://assets/objectsall/Large objects/chairsdesks/classroom_chairs_and_Desks.fbx" type="PackedScene" id=8]
[ext_resource path="res://characters/MC/MC.tscn" type="PackedScene" id=10]
[ext_resource path="res://Components/Classroom L1/Classroom.fbx" type="PackedScene" id=11]
[ext_resource path="res://characters/Zach/Zach.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/objectsall/Large objects/Door/Door I.tscn" type="PackedScene" id=13]
[ext_resource path="res://Components/basement/basementholecol.glb" type="PackedScene" id=15]
[ext_resource path="res://darkness_simulator.glb" type="PackedScene" id=16]
[ext_resource path="res://Components/Dialogue/Dialogue.tscn" type="PackedScene" id=17]
[ext_resource path="res://Components/Hallway/Classroom_HALLWAY.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/transitionobjects/transitionobject/Transition_Object3.gd" type="Script" id=21]
[ext_resource path="res://assets/objectsall/Large objects/whiteboards/Whiteboard.fbx" type="PackedScene" id=23]
[ext_resource path="res://assets/objectsall/Large objects/Door/Hallway Door.tscn" type="PackedScene" id=24]
[ext_resource path="res://Components/Classroom L1/classroom_teacher_Desk.fbx" type="PackedScene" id=25]
[ext_resource path="res://Components/Hallway/atrium_dead_end.tscn" type="PackedScene" id=26]
[ext_resource path="res://packs/Text.fbx" type="PackedScene" id=27]
[ext_resource path="res://minigames/designclass/Transition_Object_BossBattle.gd" type="Script" id=28]
[ext_resource path="res://Components/Hallway/assets/Hallway_Door.tscn" type="PackedScene" id=29]
[ext_resource path="res://Components/Welcome/Welcome.tscn" type="PackedScene" id=30]
[ext_resource path="res://Components/Office/OFFICE.tscn" type="PackedScene" id=31]
[ext_resource path="res://dev_sabrina/hallnimation/hallwayhopeful1.tscn" type="PackedScene" id=32]
[ext_resource path="res://Components/basement/Basement_Door.tscn" type="PackedScene" id=33]
[ext_resource path="res://BASEMENT_DOOR/BASEMENT_DOOR.glb" type="PackedScene" id=35]

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 75, 0 ), Vector3( 0, 67.5, 0 ), Vector3( 0, 60, 0 ), Vector3( 0, 52.5, 0 ), Vector3( 0, 45, 0 ), Vector3( 0, 37.5, 0 ), Vector3( 0, 30, 0 ), Vector3( 0, 22.5, 0 ), Vector3( 0, 15, 0 ), Vector3( 0, 7.5, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 7.5, 0 ), Vector3( 0, 15, 0 ), Vector3( 0, 22.5, 0 ), Vector3( 0, 30, 0 ), Vector3( 0, 37.5, 0 ), Vector3( 0, 45, 0 ), Vector3( 0, 52.5, 0 ), Vector3( 0, 60, 0 ), Vector3( 0, 67.5, 0 ), Vector3( 0, 75, 0 ) ]
}

[sub_resource type="BoxShape" id=9]
extents = Vector3( 1, 1, 0.952256 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 7.5, 0 ), Vector3( 0, 15, 0 ), Vector3( 0, 22.5, 0 ), Vector3( 0, 30, 0 ), Vector3( 0, 37.5, 0 ), Vector3( 0, 45, 0 ), Vector3( 0, 52.5, 0 ), Vector3( 0, 60, 0 ), Vector3( 0, 67.5, 0 ), Vector3( 0, 75, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 7.5, 0 ), Vector3( 0, 15, 0 ), Vector3( 0, 22.5, 0 ), Vector3( 0, 30, 0 ), Vector3( 0, 37.5, 0 ), Vector3( 0, 45, 0 ), Vector3( 0, 52.5, 0 ), Vector3( 0, 60, 0 ), Vector3( 0, 67.5, 0 ), Vector3( 0, 75, 0 ) ]
}

[sub_resource type="SphereShape" id=8]
radius = 0.967927

[sub_resource type="SpatialMaterial" id=10]
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( 10, 10, 10 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 95.2636, 10.2224, 62.9712 )

[sub_resource type="Curve3D" id=15]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -23.7957, -6.2102, -9.61944, 0, 0, 0, 0, 0, 0, -26.056, -6.2102, -9.66377, 0, 0, 0, 0, 0, 0, -25.8566, -6.2102, -20.9208, 0, 0, 0, 0, 0, 0, -44.2046, -6.2102, -21.7185, 0, 0, 0, 0, 0, 0, -44.4926, -6.2102, -29.1862, 0, 0, 0, 0, 0, 0, -39.6597, -6.21021, -21.6746, 0, 0, 0, 0, 0, 0, -25.2804, -6.2102, -22.6049, 0, 0, 0, 0, 0, 0, -27.577, -6.11263, -51.7675, 0, 0, 0, 0, 0, 0, -25.9578, -6.10211, -54.7045, 0, 0, 0, 0, 0, 0, -24.6609, -6.1341, -48.8809 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="RootScene" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0466938, 6.2102, 18.9819 )

[node name="BASEMENT_HALLWAY" parent="." instance=ExtResource( 19 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -44.4, 2.55354, -59.0596 )

[node name="Door2II" type="Spatial" parent="."]
transform = Transform( 0, 0, 1.13496, 0, 1, 0, 0, 0, 0.304112, -37.7925, 6.468, -19.8537 )

[node name="Hallway_Door" parent="Door2II" instance=ExtResource( 29 )]
transform = Transform( -1.2625e-05, 0, -0.000272301, 0, 0.887204, 0, -3.38287e-06, 0, -7.2963e-05, 0.000882745, 0.386963, 0.000236511 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Door2II"]
anims/RESET = SubResource( 13 )
anims/open = SubResource( 14 )

[node name="Area" type="Area" parent="Door2II"]
transform = Transform( -1.49258e-08, 0, -0.688959, 0, 0.855028, 0, 0.341463, 0, -3.01153e-08, -0.545559, 0, -0.113292 )

[node name="CollisionShape" type="CollisionShape" parent="Door2II/Area"]
transform = Transform( 2.93646, 0, 0, 0, 2.6478, 0, 0, 0, 1.65352, 0, 0, -0.829308 )
shape = SubResource( 9 )

[node name="Door1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.06532, -22.7066, 6.612, -43.6508 )

[node name="Hallway_Door" parent="Door1" instance=ExtResource( 29 )]
transform = Transform( 0.430264, 0, 0, 0, 1, 0, 0, 0, 1.05, 0.316509, 0.524379, 1.95137 )

[node name="DialoguePlayer" parent="Door1/Hallway_Door" instance=ExtResource( 17 )]
follow_viewport_enable = true
dialogue_file = "res://scenes/Charater scenes/Student/jsons/Door tutorial.json"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Door1"]
anims/RESET = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="Area" type="Area" parent="Door1"]

[node name="CollisionShape" type="CollisionShape" parent="Door1/Area"]
shape = SubResource( 9 )

[node name="Door2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.5682, 6.612, -53.8644 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Door2"]
anims/RESET = SubResource( 3 )
anims/open = SubResource( 4 )

[node name="Classroom_HALLWAY_door" parent="Door2" instance=ExtResource( 24 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.247383, 0.414001, 1.61942 )

[node name="Door3" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.6063, 6.612, -66.8241 )

[node name="Classroom_HALLWAY_door" parent="Door3" instance=ExtResource( 24 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.05266, 0.214163, 0.414001, 4.32825 )

[node name="MCSRevengeTransport" type="Spatial" parent="."]
transform = Transform( 0.128424, 0, 0, 0, 0.10088, 0, 0, 0, 0.103299, -32.5625, 7.72239, -24.6219 )
script = ExtResource( 28 )

[node name="BossBattleTimer" type="Timer" parent="MCSRevengeTransport"]

[node name="CSGSphere" type="CSGSphere" parent="MCSRevengeTransport"]
transform = Transform( 1.40378, 0, 0, 0, 3.30962, 0, 0, 0, 2.71476, -39.4922, -34.5722, 62.6274 )

[node name="Area" type="Area" parent="MCSRevengeTransport/CSGSphere"]

[node name="CollisionShape" type="CollisionShape" parent="MCSRevengeTransport/CSGSphere/Area"]
shape = SubResource( 8 )

[node name="Camera" type="Camera" parent="MCSRevengeTransport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.98928 )

[node name="Knob3" parent="." instance=ExtResource( 4 )]
transform = Transform( -5.61359e-09, 0, -0.103299, 0, 0.138535, 0, 0.118936, 0, -4.18175e-09, -22.3758, 7.01692, -62.4973 )
script = ExtResource( 21 )

[node name="Timer" type="Timer" parent="."]

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 0.021, 0, 0, 0, 0.691089, -24.7082, 4.99893, 1.80147 )

[node name="CSGBox" type="CSGBox" parent="Floor"]
transform = Transform( 112.455, 0, -4.37114e-06, 0, -0.472, 0, 9.83113e-06, 0, 50, 10, 23.6033, 0.0290012 )
material = SubResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.82414, -1.45746, -1.71461 )
shape = SubResource( 7 )

[node name="Classroom" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.0215, 6.65417, -38.6718 )

[node name="classroom_chairs_and_Desks" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5868, 6.90973, -40.1345 )

[node name="classroom_teacher_Desk" parent="." instance=ExtResource( 25 )]
transform = Transform( 0.998921, 0.00336558, -0.0463115, -0.0034327, 0.999993, -0.00136941, 0.0463066, 0.00152693, 0.998926, -17.3227, 6.20063, -34.0485 )

[node name="office-3" parent="." instance=ExtResource( 5 )]
transform = Transform( 1.37612, 0, 0, 0, 1.00371, 0, 0, 0, 1.35421, -38.6599, 7.6813, -24.0454 )

[node name="Basement_Door2" parent="." instance=ExtResource( 33 )]
transform = Transform( -1, 0, -1.58187e-07, 0, 1.41482, 0, 1.50996e-07, 0, -1.04763, -28.9453, 1.40871, -29.7088 )

[node name="Node2D" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00904, 0 )

[node name="Enviroment" type="CanvasLayer" parent="Node2D"]

[node name="MC" parent="Node2D/Enviroment" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1.41956, 0, 0, 0, 1, -25.1081, 12.4748, 23.1219 )

[node name="Knob4" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.266818, 0, 0, 0, 0.271882, 0, 0, 0, 0.123206, -26.6037, 1.6175, -41.1731 )
visible = false
script = ExtResource( 21 )

[node name="Whiteboard" parent="." instance=ExtResource( 23 )]
transform = Transform( 0.999963, 0, 0.00863927, 0, 1, 0, -0.00863927, 0, 0.999963, -17.416, 7.99107, -31.8914 )

[node name="Text" parent="." instance=ExtResource( 27 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -42.7721, 5.98089, -13.6491 )

[node name="atrium_dead_end" parent="." instance=ExtResource( 26 )]
transform = Transform( 1.42428, 0, 0, 0, 0.960988, 0, 0, 0, 2.5481, -4.30164, 7.53162, -23.0697 )

[node name="Welcome" parent="." instance=ExtResource( 30 )]

[node name="hallwayhopeful" parent="." instance=ExtResource( 32 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.2015, 5.26514, -52.4975 )
__meta__ = {
"_editor_description_": ""
}

[node name="OFFICE" parent="." instance=ExtResource( 31 )]
transform = Transform( 1.16249, 0, 0, 0, 1.38602, 0, 0, 0, 1.03559, -33.3841, 0.470384, -18.8539 )

[node name="Door I" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.999948, -0.0102275, 0, 0.00932967, 0.912166, 0, 0, 0, 1.18436, -16.2779, 7.01603, -22.7796 )

[node name="Door-new" parent="." instance=ExtResource( 2 )]
transform = Transform( 0, 0, -1, 0, 1, 0, 1, 0, 0, -28, -8, -38.982 )

[node name="BASEMENT_DOOR" parent="." instance=ExtResource( 35 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -24.8503, -11.9436, -37.1928 )

[node name="Zach" parent="." instance=ExtResource( 12 )]
transform = Transform( -7.43027e-09, 0, -0.169999, 0, 0.17, 0, 0.169985, 0, -7.43089e-09, -24, 6.63, -15.1076 )

[node name="Archive" type="Spatial" parent="."]

[node name="Path" type="Path" parent="Archive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.460112, 11.0256, -0.0120831 )
visible = false
curve = SubResource( 15 )

[node name="PathFollow" type="PathFollow" parent="Archive/Path"]
transform = Transform( -0.0196134, -2.38335e-06, -0.999759, 0, 1, -2.38369e-06, 0.999778, -4.6756e-08, -0.019613, -23.7957, -6.2102, -9.61944 )
rotation_mode = 4
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Offset settings = {Start 0 - 100.3 end}
Make sure Rotation mode is in Oriented"
}

[node name="Newatrium" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25.2144, 5.64525, -48.921 )

[node name="darkness_simulator" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25.4411, 4.88382, -48.975 )

[node name="basementholecol" parent="." instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.64898, 1.07483, -54.7241 )

[connection signal="body_shape_entered" from="Door2II/Area" to="Door2II/Hallway_Door" method="_on_Area_body_shape_entered"]
[connection signal="body_shape_exited" from="Door2II/Area" to="Door2II/Hallway_Door" method="_on_Area_body_shape_exited"]
[connection signal="ready" from="Door1/Hallway_Door/DialoguePlayer" to="Door1/Hallway_Door/DialoguePlayer" method="_on_Dialogueplayer_ready"]
[connection signal="timeout" from="MCSRevengeTransport/BossBattleTimer" to="MCSRevengeTransport" method="_on_Timer_timeout"]
[connection signal="input_event" from="MCSRevengeTransport/CSGSphere/Area" to="MCSRevengeTransport" method="_on_Area_input_event"]
[connection signal="area_entered" from="Zach" to="Node2D/Enviroment/MC" method="_on_Zach_area_entered"]
[connection signal="area_entered" from="Zach" to="Archive/Path/PathFollow" method="_on_Zach_area_entered"]
[connection signal="area_exited" from="Zach" to="Node2D/Enviroment/MC" method="_on_Zach_area_exited"]
[connection signal="area_exited" from="Zach" to="Zach" method="_on_Zach_area_exited"]
[connection signal="body_entered" from="Zach" to="Node2D/Enviroment/MC" method="_on_Zach_body_entered"]
[connection signal="body_exited" from="Zach" to="Node2D/Enviroment/MC" method="_on_Zach_body_exited"]
[connection signal="child_entered_tree" from="Archive/Path/PathFollow" to="Zach" method="_on_PathFollow_child_entered_tree"]
